# KV260-Human-Detector

./: .gitignore  .gitmodules  LICENSE  README.md  build_app.ps1  build_app.sh  build_linux.ps1  helpers.sh  regenerate_hw.ps1  regenerate_hw.sh  settings.ini  vivado_pid2952605.str  write_sd.ps1
.ipcache/062245feb940e0e0/: 062245feb940e0e0.xci  stats.txt  (+5 more)
device_tree/: device-tree.mss  pcw.dtsi  pl.dtbo  pl.dtsi  system-top.dts  system.dts  zynqmp-clk-ccf.dtsi  zynqmp.dtsi
hardware/: hardware.xpr  psu_init.h  psu_init.tcl  psu_init_gpl.h  temp2pwm_tb_behav.wcfg
linux/: .gitignore  README  README.hw  config.project
package/: .analytics  .gitignore  binary_container_1.mdb  environment-setup-cortexa72-cortexa53-xilinx-linux  post-relocate-setup.sh  relocate_sdk.py  relocate_sdk.sh  site-config-cortexa72-cortexa53-xilinx-linux  version-cortexa72-cortexa53-xilinx-linux
package/ros/src/smart_lidar/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  Makefile  cmake_install.cmake  smart_lidar
package/ros/src/smart_lidar/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
package/ros/src/smart_lidar/src/: smart_lidar.cpp
pmod_shield/: pmod_shield-cache.lib  pmod_shield.kicad_pcb  pmod_shield.sch
scripts/: export_hardware.ps1  export_hardware.tcl  generate_dt.ps1  generate_dt.tcl  generate_dto.tcl  get_settings.ps1  linux_cmd.ps1  update_platform.tcl
stl/: bottom_panel.stl  bottom_panel_feets.stl  bottom_panel_stopper.stl  cradle.stl  lidar_board_holder.stl  lidar_frame.stl  motor_frame.stl  nema_connector.stl  top_panel.stl
(+2482 files in other folders)
